--- a/Mvc4Bootstrap/Views/Shared/_Layout.cshtml
+++ b/Mvc4Bootstrap/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="brand" href="@Url.Action("Index", "Home")"><img src="~/Content/images/headerlogo11.png" /></a>
+                <a class="brand" href="@Url.Action("Index", "Customer")"><img src="~/Content/images/headerlogo11.png" /></a>
                 
             </div>
         </div>
