--- a/Mvc4Bootstrap/Views/Customer/Details.cshtml
+++ b/Mvc4Bootstrap/Views/Customer/Details.cshtml
@@ -12,12 +12,12 @@
 @section sidebar {
     <div class="bs-sidebar hidden-print affix" role="complementary">
         <ul class="nav nav-list">
-            <li class="nav-header">Anasayfa</li>
-            <li><a href="#">Müşteriler</a></li>
+             <li class="nav-header">@Html.ActionLink("Anasayfa","Index","Home")</li>
+            <li><a href="#">@Html.ActionLink("Müşteriler","Index","customer")</li>
             <li><a href="#">Raporlar</a></li>
             <li class="nav-header">Yönetim</li>
-            <li><a href="#">Kullanıclar</a></li>
-            <li><a href="#">Yetkiler</a></li>
+            <li><a href="#">@Html.ActionLink("Kullanıcılar","Index","User")</li>
+            <li><a href="#">@Html.ActionLink("Yetkiler","Index","User")</a></li>
             <li class="divider"></li>
 
         </ul>
