--- a/Mvc4Bootstrap/Views/Customer/Details.cshtml
+++ b/Mvc4Bootstrap/Views/Customer/Details.cshtml
@@ -12,12 +12,12 @@
 @section sidebar {
     <div class="bs-sidebar hidden-print affix" role="complementary">
         <ul class="nav nav-list">
-             <li class="nav-header">@Html.ActionLink("Anasayfa","Index","Home")</li>
-            <li><a href="#">@Html.ActionLink("Müşteriler","Index","customer")</li>
+            <li class="nav-header">@Html.ActionLink("Anasayfa", "Index", "Home")</li>
+            <li><a href="#">@Html.ActionLink("Müşteriler", "Index", "customer")</li>
             <li><a href="#">Raporlar</a></li>
             <li class="nav-header">Yönetim</li>
-            <li><a href="#">@Html.ActionLink("Kullanıcılar","Index","User")</li>
-            <li><a href="#">@Html.ActionLink("Yetkiler","Index","User")</a></li>
+            <li><a href="#">@Html.ActionLink("Kullanıcılar", "Index", "User")</li>
+            <li><a href="#">@Html.ActionLink("Yetkiler", "Index", "User")</a></li>
             <li class="divider"></li>
 
         </ul>
@@ -26,9 +26,11 @@
 
 }
 
-@Html.Action("Index", "Tickets", new { id =Model.Id })
+@Html.Partial("_CustomerDetails", Model)
+
+@Html.Action("Index", "Tickets", new { id = Model.Id })
 
 <p>
- 
+
     @Html.ActionLink("Müşteri Listesi", "Index")
 </p>
