--- a/Mvc4Bootstrap/Views/Tickets/Edit.cshtml
+++ b/Mvc4Bootstrap/Views/Tickets/Edit.cshtml
@@ -5,7 +5,27 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit</h2>
+
+<ul class="breadcrumb">
+    <li><a href="#">Anasayfa</a> <span class="divider">/</span></li>
+    <li class="active">Müşteriler -  @Model.Customer.FirstName @Model.Customer.LastName </li>
+</ul>
+@section sidebar {
+    <div class="bs-sidebar hidden-print affix" role="complementary">
+        <ul class="nav nav-list">
+            <li class="nav-header">Anasayfa</li>
+            <li><a href="#">Müşteriler</a></li>
+            <li><a href="#">Raporlar</a></li>
+            <li class="nav-header">Yönetim</li>
+            <li><a href="#">Kullanıclar</a></li>
+            <li><a href="#">Yetkiler</a></li>
+            <li class="divider"></li>
+
+        </ul>
+
+    </div>
+
+}
 
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
@@ -16,7 +36,7 @@
         @Html.HiddenFor(model => model.Id)
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Content)
+            Not
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Content)
@@ -24,29 +44,26 @@
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Title)
+           Başlık
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Title)
             @Html.ValidationMessageFor(model => model.Title)
         </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.CustomerId, "Customer")
-        </div>
-        <div class="editor-field">
+ 
+        <div class="editor-field" style="visibility: hidden;">>
             @Html.DropDownList("CustomerId", String.Empty)
             @Html.ValidationMessageFor(model => model.CustomerId)
         </div>
 
         <p>
-            <input type="submit" value="Save" />
+            <input type="submit" class="btn btn-primary" value="Kaydet" />
         </p>
     </fieldset>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Müşteri Detayı", "Details", "Customer", new { id = @Model.Customer.Id }, new { })
 </div>
 
 @section Scripts {
