--- a/Mvc4Bootstrap/Views/Tickets/Index.cshtml
+++ b/Mvc4Bootstrap/Views/Tickets/Index.cshtml
@@ -9,7 +9,7 @@
 <div id="page-actions" class="clearfix">
     <div btn-actions="" ng-transclude="" ng-style="BtnActionLeft()" class="btn-toolbar pull-left" style="left: auto;">
         <button class="btn btn-small btn-success ng-scope" data-ng-click="add()">
-            <i class="icon-plus"></i>&nbsp;@Html.ActionLink("Ekle", "Create", new { id = Model.First().CustomerId })
+            <i class="icon-plus"></i>&nbsp;@Html.ActionLink("Yeni Not Ekle", "Create", new { id = Model.First().CustomerId })
         </button>
 
 
