--- a/Mvc4Bootstrap/Views/Tickets/Create.cshtml
+++ b/Mvc4Bootstrap/Views/Tickets/Create.cshtml
@@ -10,14 +10,14 @@
     <li class="active">Müşteriler -  @ViewBag.Customer.FirstName @ViewBag.Customer.LastName </li>
 </ul>
 @section sidebar {
-    <div class="bs-sidebar hidden-print affix" role="complementary">
+    <div class="bs-sidebar hidden-print" role="complementary">
         <ul class="nav nav-list">
-            <li class="nav-header">Anasayfa</li>
-            <li><a href="#">Müşteriler</a></li>
+            <li class="nav-header">@Html.ActionLink("Anasayfa", "Index", "Home")</li>
+            <li><a href="#">@Html.ActionLink("Müşteriler", "Index", "customer")</li>
             <li><a href="#">Raporlar</a></li>
             <li class="nav-header">Yönetim</li>
-            <li><a href="#">Kullanıclar</a></li>
-            <li><a href="#">Yetkiler</a></li>
+            <li><a href="#">@Html.ActionLink("Kullanıcılar", "Index", "User")</li>
+            <li><a href="#">@Html.ActionLink("Yetkiler", "Index", "User")</a></li>
             <li class="divider"></li>
 
         </ul>
@@ -56,7 +56,7 @@
 
 
         <p>
-            <input type="submit" value="Kaydet" />
+            <input type="submit" value="Kaydet" class="btn btn-primary" />
         </p>
     </fieldset>
 }
