--- a/Mvc4Bootstrap/Views/Tickets/Edit.cshtml
+++ b/Mvc4Bootstrap/Views/Tickets/Edit.cshtml
@@ -11,14 +11,14 @@
     <li class="active">Müşteriler -  @Model.Customer.FirstName @Model.Customer.LastName </li>
 </ul>
 @section sidebar {
-    <div class="bs-sidebar hidden-print affix" role="complementary">
+    <div class="bs-sidebar hidden-print" role="complementary">
         <ul class="nav nav-list">
-            <li class="nav-header">Anasayfa</li>
-            <li><a href="#">Müşteriler</a></li>
+            <li class="nav-header">@Html.ActionLink("Anasayfa", "Index", "Home")</li>
+            <li><a href="#">@Html.ActionLink("Müşteriler", "Index", "customer")</li>
             <li><a href="#">Raporlar</a></li>
             <li class="nav-header">Yönetim</li>
-            <li><a href="#">Kullanıclar</a></li>
-            <li><a href="#">Yetkiler</a></li>
+            <li><a href="#">@Html.ActionLink("Kullanıcılar", "Index", "User")</li>
+            <li><a href="#">@Html.ActionLink("Yetkiler", "Index", "User")</a></li>
             <li class="divider"></li>
 
         </ul>
