--- a/Mvc4Bootstrap/Views/Tickets/Create.cshtml
+++ b/Mvc4Bootstrap/Views/Tickets/Create.cshtml
@@ -62,7 +62,7 @@
 }
 
 <div>
-    @Html.ActionLink("Müşteri Detayları", "Details", "Customer", new { id = @ViewBag.Customer.Id }, new { })
+    @Html.ActionLink("Müşteri Detayları", "Edits", "Customer", new { id = @ViewBag.Customer.Id }, new { })
 </div>
 
 
