--- a/Mvc4Bootstrap/Views/Tickets/Edit.cshtml
+++ b/Mvc4Bootstrap/Views/Tickets/Edit.cshtml
@@ -63,7 +63,7 @@
 }
 
 <div>
-    @Html.ActionLink("Müşteri Detayı", "Details", "Customer", new { id = @Model.Customer.Id }, new { })
+    @Html.ActionLink("Müşteri Detayı", "Edits", "Customer", new { id = @Model.Customer.Id }, new { })
 </div>
 
 @section Scripts {
