--- a/Mvc4Bootstrap/Views/Account/Login.cshtml
+++ b/Mvc4Bootstrap/Views/Account/Login.cshtml
@@ -37,7 +37,7 @@
             </div>
 
             <p>
-                <input type="submit" value="Giriş" />
+                <input type="submit" value="Giriş"  class="btn btn-primary"/>
             </p>
         </fieldset>
     </div>
