--- a/Mvc4Bootstrap/Views/Account/Register.cshtml
+++ b/Mvc4Bootstrap/Views/Account/Register.cshtml
@@ -47,7 +47,7 @@
             </div>
 
             <p>
-                <input type="submit" value="Kaydet" />
+                <input type="submit" value="Kaydet"  class="btn btn-primary"/>
             </p>
         </fieldset>
     </div>
