--- a/Mvc4Bootstrap/Views/User/Index.cshtml
+++ b/Mvc4Bootstrap/Views/User/Index.cshtml
@@ -29,44 +29,31 @@
 <div id="page-actions" class="clearfix">
     <div btn-actions="" ng-transclude="" ng-style="BtnActionLeft()" class="btn-toolbar pull-left" style="left: auto;">
         <button class="btn btn-small btn-success ng-scope" data-ng-click="add()">
-            <i class="icon-plus"></i>&nbsp;Ekle
+            <i class="icon-plus"></i>&nbsp;@Html.ActionLink("Ekle", "Register", "Account")
         </button>
         <button class="btn btn-small ng-scope" data-ng-click="Refresh()">
             <i class="icon-refresh"></i>&nbsp;Yenile
         </button>
-        <div class="btn-group ng-scope ng-hide" data-ng-show="selectedItems.length &gt; 0">
-            <button class="btn btn-small" data-ng-click="edit(selectedItems[0])" data-ng-disabled="selectedItems.length &gt; 1">
-                <i class="icon-edit"></i>&nbsp;Düzenle
-            </button>
-            <button class="btn btn-small ng-isolate-scope ng-scope" co-delete-button="" confirm-message="You really want to delete this entity?" delete-action="delete()">
-                <i class="icon-remove"></i>&nbsp;Sil
-            </button>
-        </div>
+        
 
     </div>
     <div class="btn-toolbar pull-right">
-        <div class="btn-group">
+      @*  <div class="btn-group">
             <button class="btn btn-small dropdown-toggle" data-toggle="dropdown">
                 <i class="icon-filter"></i>&nbsp;Filtre
         <span class="caret"></span>
             </button>
-            <ul class="dropdown-menu">
-                <!-- ngRepeat: filter in definitionFilters -->
+          
+        </div>*@
 
-                <li><a tabindex="-1" href="#">Ümmet Zivali</a></li>
-                <li><a tabindex="-1" href="#">Rüstem Türkyılmaz</a></li>
-
-            </ul>
-        </div>
-
-        <div class="input-append" style="margin: 0px 0px 0px 10px;">
+       @* <div class="input-append" style="margin: 0px 0px 0px 10px;">
 
             <form style="margin: 0px">
                 <input type="text" style="line-height: 16px; font-size: 13px;">
 
                 <button type="submit" class="btn">Ara</button>
             </form>
-        </div>
+        </div>*@
     </div>
 </div>
 <table class="table table-bordered table-hover">
@@ -74,19 +61,19 @@
 
         <th>Detay</th>
         <th>
-            @Html.DisplayNameFor(model => model.FullName)
+            Adı Soyadı
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.UserName)
+            Kullanıcı Adı
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Email)
+            Email
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.IsAdministrator)
+            Yönetici Mi?
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Status)
+            Durum
         </th>
 
 
@@ -101,10 +88,10 @@
             </td>
 
             <td>
-                @Html.DisplayFor(modelItem => item.Email)
+                @Html.DisplayFor(modelItem => item.UserName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.UserName)
+                @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.IsAdministrator)
