--- a/Mvc4Bootstrap/Views/Account/ChangePassword.cshtml
+++ b/Mvc4Bootstrap/Views/Account/ChangePassword.cshtml
@@ -4,13 +4,8 @@
     ViewBag.Title = "Change Password";
 }
 
-<h2>Change Password</h2>
-<p>
-    Use the form below to change your password. 
-</p>
-<p>
-    New passwords are required to be a minimum of @Membership.MinRequiredPasswordLength characters in length.
-</p>
+<h2>Şifre Değiştir</h2>
+ 
 
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
@@ -19,10 +14,10 @@
     @Html.ValidationSummary(true, "Password change was unsuccessful. Please correct the errors and try again.")
     <div>
         <fieldset>
-            <legend>Account Information</legend>
+            <legend>Hesap Bilgileri</legend>
 
             <div class="editor-label">
-                @Html.LabelFor(m => m.OldPassword)
+                Eski Şifre
             </div>
             <div class="editor-field">
                 @Html.PasswordFor(m => m.OldPassword)
@@ -30,7 +25,7 @@
             </div>
 
             <div class="editor-label">
-                @Html.LabelFor(m => m.NewPassword)
+                Yeni Şifre
             </div>
             <div class="editor-field">
                 @Html.PasswordFor(m => m.NewPassword)
@@ -38,7 +33,7 @@
             </div>
 
             <div class="editor-label">
-                @Html.LabelFor(m => m.ConfirmPassword)
+                Yeni Şifre Tekrar
             </div>
             <div class="editor-field">
                 @Html.PasswordFor(m => m.ConfirmPassword)
@@ -46,7 +41,7 @@
             </div>
 
             <p>
-                <input type="submit" value="Change Password" />
+                <input type="submit" value="Şifre Değiştir"   class="btn btn-primary"/>
             </p>
         </fieldset>
     </div>
