--- a/Mvc4Bootstrap/Views/Customer/Index.cshtml
+++ b/Mvc4Bootstrap/Views/Customer/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model PagedList.PagedList<A1fxCrm.Web.Models.Customer>
 @using PagedList.Mvc;
-
+ 
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -20,48 +20,33 @@
             <li><a href="#">@Html.ActionLink("Kullanıcılar","Index","User")</li>
             <li><a href="#">@Html.ActionLink("Yetkiler","Index","User")</a></li>
             <li class="divider"></li>
-             
+
         </ul>
- 
+
     </div>
 
 }
 <div id="page-actions" class="clearfix">
     <div btn-actions="" ng-transclude="" ng-style="BtnActionLeft()" class="btn-toolbar pull-left" style="left: auto;">
-        <button class="btn btn-small btn-success ng-scope" data-ng-click="add()">
-            <i class="icon-plus"></i>&nbsp;Ekle
-        </button>
-        <button class="btn btn-small ng-scope" data-ng-click="Refresh()">
-            <i class="icon-refresh"></i>&nbsp;Yenile
-        </button>
-        <div class="btn-group ng-scope ng-hide" data-ng-show="selectedItems.length &gt; 0">
-            <button class="btn btn-small" data-ng-click="edit(selectedItems[0])" data-ng-disabled="selectedItems.length &gt; 1">
-                <i class="icon-edit"></i>&nbsp;Düzenle
-            </button>
-            <button class="btn btn-small ng-isolate-scope ng-scope" co-delete-button="" confirm-message="You really want to delete this entity?" delete-action="delete()">
-                <i class="icon-remove"></i>&nbsp;Sil
-            </button>
-        </div>
- 
-
     </div>
     <div class="btn-toolbar pull-right">
         <div class="btn-group">
-            <button class="btn btn-small dropdown-toggle" data-toggle="dropdown">
-                <i class="icon-filter"></i>&nbsp;Kullanıcılar
-             <span class="caret"></span>
-            </button>
-            @Html.Action("ActiveUserList","User")
-
-            </div>
-           <div class="btn-group">
+            @{ if(Html.IsAdmin()){
                 <button class="btn btn-small dropdown-toggle" data-toggle="dropdown">
+                    <i class="icon-filter"></i>&nbsp;Kullanıcılar
+             <span class="caret"></span>
+                </button>
+                @Html.Action("ActiveUserList","User")
+                }}
+        </div>
+        <div class="btn-group">
+            <button class="btn btn-small dropdown-toggle" data-toggle="dropdown">
                 <i class="icon-filter"></i>&nbsp;Kategoriler
         <span class="caret"></span>
             </button>
             @Html.Action("StatusList","Status")
         </div>
-        
+
         <div class="input-append" style="margin: 0px 0px 0px 10px;">
 
             <form style="margin: 0px" method="post" action="/Customer">
@@ -95,7 +80,7 @@
             <th>Tarih
             </th>
 
- 
+
         </tr>
     </thead>
 
@@ -103,24 +88,24 @@
     {
         <tr>
             <td>
-              
+
                 <a class="icon-edit" href="/customer/Edit/@item.Id"></a>
-                </td>
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FirstName)  @Html.DisplayFor(modelItem => item.LastName)
             </td>
 
             <td>
-                <a href="" class="icon-user"></a>
+                <a href="/customer/Edit/@item.Id" class="icon-user"></a>
             </td>
             <td>
 
-                <a href="" class="icon-user"></a>
+                <a href="/customer/Edit/@item.Id" class="icon-user"></a>
             </td>
-            <td><a href="" class="icon-envelope"></a></td>
-              <td>
-            @Html.DisplayFor(modelItem => item.CustomerStatus.Name)
-        </td>
+            <td><a href="/customer/Edit/@item.Id" class="icon-envelope"></a></td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CustomerStatus.Name)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.City)
             </td>
@@ -133,14 +118,14 @@
             <td>
                 @Html.DisplayFor(modelItem => item.CreatedDate)
             </td>
-          
+
 
         </tr>
     }
 
 </table>
 <div class="pagination pagination-right">
-   @Html.PagedListPager(Model, page => Url.Action("Index", 
+    @Html.PagedListPager(Model, page => Url.Action("Index", 
     new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
 </div>
- 
+
