--- a/Mvc4Bootstrap/Views/Shared/_Layout.cshtml
+++ b/Mvc4Bootstrap/Views/Shared/_Layout.cshtml
@@ -12,13 +12,23 @@
     <div class="navbar">
         <div class="navbar-inner">
             <div class="container-fluid">
+
                 <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="brand" href="@Url.Action("Index", "Customer")"><img src="~/Content/images/headerlogo11.png" /></a>
-                
+                <a class="brand" href="@Url.Action("Index", "Customer")">
+                    <img src="~/Content/images/headerlogo11.png" /></a>
+                @{if (HttpContext.Current.User.Identity.IsAuthenticated)
+                  {
+                <ul class="nav">
+                    <li>@Html.ActionLink("Müşteriler", "Index", "Customer")</li>
+                    <li>@Html.ActionLink("Kullanıcılar", "Index", "User")</li>
+                    <li>@Html.ActionLink("Şifre Değiştir", "ChangePassword", "Account")</li>
+                    <li>@Html.ActionLink("Çıkış", "LogOff", "Account")</li>
+                </ul>
+                  }}
             </div>
         </div>
     </div>
@@ -55,7 +65,7 @@
             </div>
         </div>
 
-         
+
     </div>
     @Scripts.Render("~/js")
     @RenderSection("scripts", required: false)
