--- a/Mvc4Bootstrap/Views/User/Edit.cshtml
+++ b/Mvc4Bootstrap/Views/User/Edit.cshtml
@@ -46,7 +46,7 @@
 
     </div>
     <div class="btn-toolbar pull-right">
-        <div class="btn-group">
+        @*<div class="btn-group">
             <button class="btn btn-small dropdown-toggle" data-toggle="dropdown">
                 <i class="icon-filter"></i>&nbsp;Filtre
         <span class="caret"></span>
@@ -58,7 +58,7 @@
                 <li><a tabindex="-1" href="#">Rüstem Türkyılmaz</a></li>
 
             </ul>
-        </div>
+        </div>*@
 
         <div class="input-append" style="margin: 0px 0px 0px 10px;">
 
