--- a/Mvc4Bootstrap/Views/Home/Index.cshtml
+++ b/Mvc4Bootstrap/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Ana Sayfa";
+    Layout = "~/Views/Shared/_LayoutBlue.cshtml";
 }
 
 <div class="page-header">
