--- a/Mvc4Bootstrap/Views/Account/Login.cshtml
+++ b/Mvc4Bootstrap/Views/Account/Login.cshtml
@@ -2,43 +2,46 @@
 
 @{
     ViewBag.Title = "Giriş";
+    Layout = "~/Views/Shared/_LoginLayout.cshtml";
 }
  
-
-<script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
-
 @Html.ValidationSummary(true, "Login was unsuccessful. Please correct the errors and try again.")
-
-@using (Html.BeginForm()) {
+<div class="login-wrapper">
+    <div style="width:111px; margin:0 auto 10px auto;"> 
+		<img src="/content/images/headerlogo11.png" alt="logo" width="111" height="78"/> 
+@using (Html.BeginForm())
+{
     <div>
-        <fieldset>
-            <legend>Giriş</legend>
-
-            <div class="editor-label">
-                Kullanıcı Adı
-            </div>
-            <div class="editor-field">
-                @Html.TextBoxFor(m => m.UserName)
+            <h3>Oturum Aç</h3>
+			<hr/>
+			<div class="form-group">
+			<div class="controls">
+		 
+                  @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
                 @Html.ValidationMessageFor(m => m.UserName)
-            </div>
-
-            <div class="editor-label">
-                Şifre
-            </div>
-            <div class="editor-field">
-                @Html.PasswordFor(m => m.Password)
+			</div>
+			</div>
+        <div class="form-group">
+			<div class="controls">
+			   @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
                 @Html.ValidationMessageFor(m => m.Password)
-            </div>
-
-            <div class="editor-label">
-                @Html.CheckBoxFor(m => m.RememberMe)
-               Hatırla
-            </div>
-
-            <p>
-                <input type="submit" value="Giriş"  class="btn btn-primary"/>
-            </p>
-        </fieldset>
+			</div>
+			</div>
+			<div class="form-group">
+			<div class="controls">
+			<label class="checkbox">
+			 @Html.CheckBoxFor(m => m.RememberMe) Hatırla
+			</label>
+			</div>
+			</div>
+			<div class="form-group">
+			<div class="controls">
+			<button type="submit" class="btn btn-primary form-control">Giriş</button>
+			</div>
+			</div>
+			<hr/>
+           
+     
     </div>
 }
+    </div></div>
