--- a/Mvc4Bootstrap/Views/Shared/_LayoutBlue.cshtml
+++ b/Mvc4Bootstrap/Views/Shared/_LayoutBlue.cshtml
@@ -7,12 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Website &bull; @ViewBag.Title</title>
-
+  
     @*   @Styles.Render("~/css")*@
-    <link href="/Content/bootstrap.css" rel="stylesheet" />
- 
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.2/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="/Content/flaty.css" rel="stylesheet" />
+    <link href="~/Content/bootstrap.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/Content/dataTables.bootstrap.css" />
+    @*<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.2/css/font-awesome.min.css" rel="stylesheet" />*@
+    <link href="~/Content/css/font-awesome.css" rel="stylesheet" />
+    <link href="~/Content/flaty.css" rel="stylesheet" />
   
 
    
@@ -33,14 +34,14 @@
 
                 <li class="user-profile">
                     <a data-toggle="dropdown" href="#" class="user-menu dropdown-toggle">
-                        <img class="nav-user-photo"  alt="@HttpContext.Current.User.Identity.Name">
+                        <img class="nav-user-photo" alt="@HttpContext.Current.User.Identity.Name">
                         <span class="hidden-sm" id="user_info">
                             @{@HttpContext.Current.User.Identity.Name}
                         </span>
                         <i class="icon-caret-down"></i>
                     </a>
                     <ul class="dropdown-menu dropdown-navbar" id="user_menu">
-                    
+
                         <li>
                             <a href="/account/changepassword">
                                 <i class="icon-cog"></i>
@@ -101,6 +102,11 @@
     <script src="~/Scripts/tinymce/tinymce.js" type="text/javascript"></script>
     <script type="text/javascript" src="~/Scripts/angular-resource.js"></script>
     <script type="text/javascript" src="~/Scripts/mainmodule.js"></script>
+    <script src="~/Scripts/jquery.nicescroll.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="~/Scripts/jquery.cookie.js"></script>
+    <script type="text/javascript" src="~/Scripts/flaty.js"></script>
+    <script type="text/javascript" src="~/Scripts/jquery.dataTables.js"></script>
+    <script type="text/javascript" src="~/Scripts/dataTables.bootstrap.js"></script>
 </body>
 </html>
 
